apps/mailhog/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mailhog
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mail.ramoneees.com`)
      kind: Rule
      services:
        - name: mailhog
          port: 8025
  tls:
    secretName: wildcard-ramoneees-com-tls
